# agent-skills

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  HOW-IT-WAS-CREATED.md  PLAN.md  README.md  SKILL-DISCOVERY.md  SKILL.md
.sisyphus/: boulder.json  ralph-loop.local.md
.sisyphus/plans/: fix-rtms-protocol.md
tools/zoom-crawler/: README.md  pyproject.toml
tools/zoom-crawler/zoom_crawler/: __init__.py  cli.py  crawler.py
tools/zoom-crawler/zoom_crawler.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
zoom-apps-sdk/: INDEX.md  SKILL.md
zoom-apps-sdk/concepts/: architecture.md
zoom-apps-sdk/examples/: in-client-oauth.md  quick-start.md
zoom-apps-sdk/references/: apis.md  oauth.md  (+3 more)
zoom-calendar/: SKILL.md
zoom-chatbot-studio/: SKILL.md
zoom-cobrowse-sdk/: INDEX.md  SKILL.md  get-started.md
zoom-commerce/: SKILL.md
zoom-contact-center/: SKILL.md  learnings.md
zoom-crc/: SKILL.md
zoom-docs/: SKILL.md
zoom-events/: SKILL.md
zoom-general/: SKILL.md
zoom-mail/: SKILL.md
zoom-meeting-sdk/: SKILL.md  linux.md
zoom-oauth/: INDEX.md  SKILL.md  instructions.md  learnings.md
zoom-phone/: SKILL.md
zoom-platform/: SKILL.md
zoom-probe-sdk/: SKILL.md
zoom-rest-api/: INDEX.md  SKILL.md
zoom-rivet/: SKILL.md
zoom-rooms/: SKILL.md
zoom-rtms/: INDEX.md  LEARNINGS.md  SKILL.md
zoom-team-chat/: INDEX.md  SKILL.md  skill.md
zoom-ui-toolkit/: INDEX.md  SKILL.md
zoom-video-sdk/: SKILL.md  linux.md
zoom-virtual-agent/: SKILL.md
zoom-webhooks/: SKILL.md
zoom-websockets/: SKILL.md
zoom-whiteboard/: SKILL.md
(+293 files in other folders)
